<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Activities.AddPropertyActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar_add_property"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/auth_screens_background"
        app:layout_constraintBottom_toTopOf="@id/scrollView_add_property"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/add_property"
            android:textColor="@color/white" />
    </androidx.appcompat.widget.Toolbar>


    <ScrollView
        android:id="@+id/scrollView_add_property"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolBar_add_property">

        <LinearLayout
            android:id="@+id/linearLayout_add_property"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolBar_add_property">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp">

                <ImageView
                    android:id="@+id/img_property_add_property"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/property_image"
                    android:src="@color/silver"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/imgBtn_add_image_property"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="15dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_add_a_photo_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <EditText
                android:id="@+id/et_property_title_add_property"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:hint="@string/property_title" />

            <com.example.rentalapartmentapp.View.CustomUI.CustomEditText
                android:id="@+id/et_property_price_add_property"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:hint="@string/property_price"
                android:inputType="number" />

            <com.example.rentalapartmentapp.View.CustomUI.CustomEditText
                android:id="@+id/et_property_desc_add_property"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:hint="@string/property_desc"
                android:inputType="textMultiLine"
                android:maxLines="10"
                android:minLines="2" />

            <com.example.rentalapartmentapp.View.CustomUI.CustomEditText
                android:id="@+id/et_property_quantity_add_property"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:hint="@string/property_quantity"
                android:inputType="number" />

            <com.example.rentalapartmentapp.View.CustomUI.CustomEditText
                android:id="@+id/et_property_address_add_property"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:hint="Property Address"
                android:inputType="textPostalAddress" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginBottom="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_spinner_property_bedrooms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:text="Property Bedroom"
                    android:textColor="@color/colorPrimary"
                    android:textSize="17dp" />

                <Spinner
                    android:id="@+id/spinner_property_bedrooms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginBottom="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_spinner_property_furniture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="Furniture Type"
                    android:textColor="@color/colorPrimary"
                    android:textSize="17dp" />

                <Spinner
                    android:id="@+id/spinner_property_furniture"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginBottom="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_spinner_property_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="Property Type"
                    android:textColor="@color/colorPrimary"
                    android:textSize="17dp" />

                <Spinner
                    android:id="@+id/spinner_property_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp" />
            </LinearLayout>

            <androidx.legacy.widget.Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <com.example.rentalapartmentapp.View.CustomUI.CustomButton
                android:id="@+id/btn_add_property"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="bottom"
                android:background="@drawable/auth_screens_background"
                android:text="@string/add_property"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>